@@ -574,14 +574,22 @@ $$BEGIN
    IF TG_OP IN ('INSERT', 'UPDATE') THEN
       RAISE WARNING 'trigger % % NEW row: id = %, c = %', TG_WHEN, TG_OP, NEW.id, NEW.c;
    END IF;
+
+   NEW.c := 'modified';
+
    RETURN NEW;
 END;$$;
 -- test BEFORE trigger
 CREATE TRIGGER shorttrig BEFORE UPDATE ON shorty FOR EACH ROW EXECUTE PROCEDURE shorttrig();
 BEGIN;
-UPDATE shorty SET id = id + 1 WHERE id = 4;
+UPDATE shorty SET id = id + 1 WHERE id = 4 RETURNING c;
 WARNING:  trigger BEFORE UPDATE OLD row: id = 4, c = short     
 WARNING:  trigger BEFORE UPDATE NEW row: id = 5, c = short     
+     c      
+------------
+ modified  
+(1 row)
+
 ROLLBACK;
 -- test AFTER trigger
 DROP TRIGGER shorttrig ON shorty;
